# ngap-rs

./: Cargo.toml  build.rs  ngap-headers.h  wrapper.h
benches/: libngap_decode.rs
src/: lib.rs  ngap_codec.rs
