[package]
name = "ngap-codec"
description = "NGAP Definitions Codec in Rust using asn1c generated PDU defitions."
version = "0.1.0"
authors = ["gabhijit"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "*"
libc = "*"

[build-dependencies]
bindgen = "0.55.*"
pkg-config = "^0.3"
